<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="login"
            type="com.example.mustapp.LoginFragment.Login" />
        <variable
            name="fragmentLogin"
            type="com.example.mustapp.LoginFragment" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".LoginFragment">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:logo="@drawable/ic_person"
            app:title="LOG IN"
            android:id="@+id/toolbarLogin"
            android:background="@drawable/registration_header"
            app:titleTextColor="@color/defaultColor"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:id="@+id/scrollView2"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="20dp"
                >
                <Spinner
                    android:id="@+id/spinnerRole"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:dropDownSelector="@color/colorAccent"
                    android:layout_marginStart="8dp"
                    android:entries="@array/role_login"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    selectedItem="@={login.role}"
                    android:layout_marginEnd="8dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/schoolIdLayout1"
                    android:layout_marginBottom="10dp"
                    app:errorEnabled="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/email"
                        android:text="@={login.emailLogin}"
                        android:singleLine="true"
                        android:hint="@string/enter_your_email"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/passwordLayout1"
                    app:errorEnabled="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:passwordToggleEnabled="true"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/passwordLogin2"
                        android:singleLine="true"
                        android:text="@={login.loginPassword}"
                        android:hint="@string/passwordHint"/>
                </com.google.android.material.textfield.TextInputLayout>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_password"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:checked="@={login.rememberChecked}"
                    />

                <Button
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:onClick="@{(v)->fragmentLogin.login(v,login)}"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/state_list"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:id="@+id/loginButton"
                    android:background="@drawable/rounded_button"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:gravity="start"
                    android:text="@string/forgotPassword"
                    android:layout_gravity="end"
                    android:id="@+id/forgotPassword"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorPrimaryVariant"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="start"
                    android:onClick="@{(v)->fragmentLogin.startRegistration(v)}"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:text="@string/not_a_member_click_to_register"/>
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/progressLogin"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|center_vertical"
            app:backgroundTint="@color/colorAccent"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>